@@ -42,7 +42,7 @@
  */
 
 #include <stdlib.h>
-
+#include <string.h>
 #include <gmodule.h>
 
 #include <libtracker-common/tracker-config.h>
@@ -281,12 +281,33 @@ tracker_indexer_add_directory (TrackerIndexer *indexer,
 			       PathInfo       *info)
 {
 	TrackerIndexerPrivate *priv;
+	gboolean ignore = FALSE;
+	gchar **ignore_dirs;
+	gint i;
 
 	g_return_if_fail (info != NULL);
 
 	priv = TRACKER_INDEXER_GET_PRIVATE (indexer);
 
-	g_queue_push_tail (priv->dir_queue, info);
+	ignore_dirs = tracker_indexer_module_get_ignore_directories (info->module);
+
+	if (ignore_dirs) {
+		for (i = 0; ignore_dirs[i]; i++) {
+			if (strcmp (info->path, ignore_dirs[i]) == 0) {
+				ignore = TRUE;
+				break;
+			}
+		}
+	}
+
+	if (!ignore) {
+		g_queue_push_tail (priv->dir_queue, info);
+	} else {
+		g_message ("Ignoring directory: %s\n", info->path);
+		path_info_free (info);
+	}
+
+	g_strfreev (ignore_dirs);
 }
 
 static void
